# compositor

./: CMakeLists.txt  README.md  ffmeg_cmd.txt
src/Automation Scripts/: compress  compressX  instructions.md
src/display/: display.cc  display.hh
src/frontend/: fake-webcam.cc  real-webcam.cc  test-harness.cc  tune-params.cc
src/input/: camera.cc  camera.hh  frame_input.hh  jpeg.cc  jpeg.hh  mjpeg_input.cc  mjpeg_input.hh  yuv4mpeg.cc  yuv4mpeg.hh
src/test_harness/: test_harness.cc
src/util/: 2d.hh  chroma_key.cc  chroma_key.hh  compositor.cc  compositor.hh  despill.cc  despill.hh  dilate_erode.cc  dilate_erode.hh  file.cc  file.hh  finally.hh  h264_encoder.cc  h264_encoder.hh  ivf.cc  ivf.hh  ivf_writer.cc  ivf_writer.hh  keying.cc  keying.hh  keying_clip.cc  keying_clip.hh  paranoid.cc  paranoid.hh  procinfo.hh  raster.cc  raster.hh  raster_handle.cc  raster_handle.hh  subprocess.cc  subprocess.hh  thread_pool.cc  thread_pool.hh  tokenize.hh
